@@ -1,5 +1,5 @@
-media-libs/fontconfig >=x11-libs/libXft-2.1.0 x11-libs/libXmu x11-libs/libXt x11-libs/libXv gif? ( >=media-libs/giflib-4.1.0-r3 ) png? ( media-libs/libpng:0= ) jpeg? ( virtual/jpeg ) tiff? ( media-libs/tiff:0 ) xinerama? ( x11-libs/libXinerama ) xrandr? ( x11-libs/libXrandr ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool dev-vcs/git
-media-libs/fontconfig >=x11-libs/libXft-2.1.0 x11-libs/libXmu x11-libs/libXt x11-libs/libXv gif? ( >=media-libs/giflib-4.1.0-r3 ) png? ( media-libs/libpng:0= ) jpeg? ( virtual/jpeg ) tiff? ( media-libs/tiff:0 ) xinerama? ( x11-libs/libXinerama ) xrandr? ( x11-libs/libXrandr ) nls? ( >=sys-devel/gettext-0.10.39 )
+media-libs/fontconfig >=x11-libs/libXft-2.1.0 x11-libs/libXmu x11-libs/libXt x11-libs/libXv gif? ( >=media-libs/giflib-4.1.0-r3 ) imagemagick? ( media-gfx/imagemagick ) jpeg? ( virtual/jpeg ) png? ( media-libs/libpng:0= ) tiff? ( media-libs/tiff:0 ) webp? ( media-libs/libwebp ) xinerama? ( x11-libs/libXinerama ) xrandr? ( x11-libs/libXrandr ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool dev-vcs/git
+media-libs/fontconfig >=x11-libs/libXft-2.1.0 x11-libs/libXmu x11-libs/libXt x11-libs/libXv gif? ( >=media-libs/giflib-4.1.0-r3 ) imagemagick? ( media-gfx/imagemagick ) jpeg? ( virtual/jpeg ) png? ( media-libs/libpng:0= ) tiff? ( media-libs/tiff:0 ) webp? ( media-libs/libwebp ) xinerama? ( x11-libs/libXinerama ) xrandr? ( x11-libs/libXrandr ) nls? ( >=sys-devel/gettext-0.10.39 )
 0
 http://www.windowmaker.org/pub/source/release/WindowMaker-extra-0.1.tar.gz
 
@@ -8,7 +8,7 @@ GPL-2
 The fast and light GNUstep window manager
 
 autotools eutils git-2 git-r3 libtool multilib multiprocessing toolchain-funcs
-gif jpeg nls png tiff modelock xinerama +xrandr
+gif imagemagick jpeg modelock nls png tiff webp xinerama xrandr
 
 
 
