@@ -1,5 +1,5 @@
 AUX wmaker.desktop 221 SHA256 40359d3c61117f0dbc5eb547e4c369982427e8bc3174c95002d34eb30f9a4a84 SHA512 1c1b24001e47a2af8f18a5f90675d095ba7f929ad9273ca82f61fd13ad35ff22dc9b777eec24fc3fd984790a5d494949d1dd5e0ca39780920017ea7971a3289d WHIRLPOOL 68ea31480ba1796e4243184deff38270963841c2bdb54bc85a606ecad0cdccc6815b11fa67158cbcc527ae3a17488b97a209283289922323ed42ea37a062ac2b
 DIST WindowMaker-extra-0.1.tar.gz 238018 SHA256 acd6e1fb790485b107daf2b710da372367b41383c55d9c8bdfdac521d850edc4 SHA512 0fe9b3ffc093942db167d8a01e15c0f6741f3a40959d1434ea4f23e7b9d4a9c13935a61eabef9691e5fdfd4e407564caafce15c2d65d66499960a6764a874ab8 WHIRLPOOL f2c61b318f64a2debb727ae79dfa1bb8101888bc9492633a96ace0e704c731c383e92882c871622987d5971b919359c066638fba05c5dade330fe3bee21bb034
-EBUILD windowmaker-9999.ebuild 2669 SHA256 3194d91d9df664507b7755a79a675dabfc6ebb6e6ad3debad91907bfccd86dc6 SHA512 f40fdfa1f312ca7b602dd32e93c2035f410edf7fa037b873175667ca08e520f45a5b0fae3a6e253392c983b27e4f06a8f4fd4fc3ed9724f2c951a0cb3981e318 WHIRLPOOL 80a79360b71a6d804f3125f12630d450b9652dd2206dac6923f2ce40428ee83d7cf960ffa4e34fd51581017618798a2e6a9f580a2c9b2ff18435b3220522eec4
-MISC ChangeLog 992 SHA256 7f5f5686055f73b92a561532dea1d8788cc4b30b091d0c7c959fd768aae10400 SHA512 43147eab4a00514d2cb92779f1df0cbf64eeadf2acce9a7e8789516541dbf034ec211cd0b01570c90efa6283f67695e113b0e96616cbdfb7b34779acfc17df68 WHIRLPOOL 1d576799c06e247b908e99d6f449b254a411f1f6a4498f3b727c9e841ea01f087bad03f9c7390587c80e16357ab5d0c3e0dbd726cd18143bdabeb4d192a5434e
-MISC metadata.xml 394 SHA256 1b7d1d11e92f67acd47aa9243ae010ea48f55c631fa6b43b025b368b8c03a9ee SHA512 e905625c4fe611df39c8d677d87673212b2118db972d7520f6f1e3e2c8e016b6cad127c0b378a1094db2fe344daf8cbdd58ab892a9d4fcfd946e107c58b6dd6e WHIRLPOOL 9a51befda292ae0f03fb68237b8358999443587f501970fdcaf4a120623efa820a78cca5d6b237f28ed02845bc6f3129a837c2a93ae3c443b98f7fb966e77b5b
+EBUILD windowmaker-9999.ebuild 2813 SHA256 97fc7975bb186b4c8f1724160c99e1aa8e1d65b863be54bb587685e3968979fa SHA512 8853b7c03a037b1c904b3a65929763ea73bd375c57abf5673319b7513ea648831436b6ad3af4450f6bf8bed24ea030a40b5c0fdef4ad2790743202ba2aa94c71 WHIRLPOOL 3ad565bca0156bd245bbb6164e5333558fee049dbb44ec2248fa9a78f39fa59d7490209dcd5dfee4935e3dcc4169a278459c226f560fda8c9631d38af8f973f4
+MISC ChangeLog 1107 SHA256 9029f8955e2a4d446864f54c40c179b3b23c02b8db54e285624bda7ab299b310 SHA512 8d0a2828b4dda556ced4f2748dbbf9e5ed206c099ecbbaa9bdac9c5f0e17a8b938d6495ab9fbd7c0f34894246a3eb012d4cfae2f16b471cc9d9ae14cbe1e26dd WHIRLPOOL fcd0be2c201cc4406852de95e993432d1949479e8c22c6615889feb5d7348c786b46b9926784b868b44296bb8d83fa0d1c0310ef76fc6c66228ed3d537b90169
+MISC metadata.xml 491 SHA256 adf20a574ac6c90560edc4581473bd340fe1002ac26d642199878d1fe39f9b70 SHA512 172a00ac05dcb64e3aa08c553f8e22d475f88541263fe139db3e486a96efa079aab82e8832f53d7d83039a12187b9094585c1e944f6a9af7bf82a1c8044d1e40 WHIRLPOOL 656c4648b292d58f8590d4a5c456ced8b52cf389253a42c2240add03a336e23a571f792275968dd20a131aaab0a30ed918a5849157dc5a9611204ebc4216af73
