@@ -3,9 +3,10 @@
 <pkgmetadata>
 	<herd>gnustep</herd>
 	<use>
-		<flag name='modelock'>Enable XKB language status lock support. README
+		<flag name="modelock">Enable XKB language status lock support. README
 			says: "If you don't know what it is you probably don't need
 			it."</flag>
 		<flag name='xrandr'>Enable XRandR window extension support</flag>
+		<flag name="webp">Enables WebP image format support using <pkg>media-libs/libwebp</pkg></flag>
 	</use>
 </pkgmetadata>
